--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css" rel="stylesheet">
 
+      <!-- 引入 CSS 文件 -->
+      <link rel="stylesheet" href="node_modules/nprogress/nprogress.css">
+
+      <!-- 引入 JS 文件 -->
+      <script src="node_modules/nprogress/nprogress.js"></script>
+
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
