修改主页样式

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="node_modules/nprogress/nprogress.js"></script>
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>CLGBBS</title>
   </head>
   <body>
     <div id="app"></div>
